--- a/layout/_partial/article-bottom.ejs
+++ b/layout/_partial/article-bottom.ejs
@@ -53,7 +53,7 @@
 <script type="text/javascript">
 	socialShare("#share", {
 	    title : '<%= post.title %>',
-	    description : '<%= getexcerpt(post.content, 50) %>',
+	    description : '<%= getexcerpt(post.content, 50, false) %>',
 	    wechatQrcodeTitle : "分享到微信",
 	    wechatQrcodeHelper : '微信扫描二维码',
 	    source : '<%= full_url_for(post.path) %>'
