--- a/layout/_partial/content-page.ejs
+++ b/layout/_partial/content-page.ejs
@@ -83,7 +83,7 @@
 	</header>
 
 	<div class="post-content" id="post_content">
-		<%- argon_preprocess_article(post.content, theme) %>
+		<%- argon_preprocess_article(post.content, theme, false) %>
 	</div>
 
 	<% if (post.tags.length) { %>
