--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -266,7 +266,7 @@
 						<% }
 					%>
 					<ul class="navbar-nav align-items-lg-center ml-lg-auto">
-						<li class="nav-item" data-toggle="modal" data-target="#argon_search_modal">
+						<li class="nav-item" data-toggle="modal" data-target="#argon_search_modal" id="navbar_search_btn_pc">
 							<a class="nav-link nav-link-icon">
 								<i class="fa fa-search"></i>
 								<span class="nav-link-inner--text d-lg-none">搜索</span>
