--- a/layout/_partial/content-article.ejs
+++ b/layout/_partial/content-article.ejs
@@ -53,6 +53,17 @@
 							}) %>
 						</div>
 					<% }
+					if (meta_list[i] == 'read'){ %>
+						<% if (i > 0){ %>
+							<div class="post-meta-devide">|</div>
+						<% } %>
+						<div class="post-meta-detail post-meta-detail-words">
+							<i class="fa fa fa-book" aria-hidden="true"></i>
+							<span id="busuanzi_container_page_pv">
+								阅读<span id="busuanzi_value_page_pv"></span>次
+							</span>
+						</div>
+					<% }
 					if (meta_list[i] == 'words'){ %>
 						<% if (i > 0){ %>
 							<div class="post-meta-devide">|</div>
@@ -71,7 +82,7 @@
 							<%= min2read(post.content,{cn:theme.reading_speed_cn, en:theme.reading_speed_en}) %> 分钟
 						</div>
 					<% }
-					
+
 				}
 			%>
 		</div>
