--- a/layout/_partial/content-page.ejs
+++ b/layout/_partial/content-page.ejs
@@ -39,6 +39,17 @@
 							</time>
 						</div>
 					<% }
+					if (meta_list[i] == 'read'){ %>
+						<% if (i > 0){ %>
+							<div class="post-meta-devide">|</div>
+						<% } %>
+						<div class="post-meta-detail post-meta-detail-words">
+							<i class="fa fa fa-book" aria-hidden="true"></i>
+							<span id="busuanzi_container_page_pv">
+								阅读<span id="busuanzi_value_page_pv"></span>次
+							</span>
+						</div>
+					<% }
 					if (meta_list[i] == 'words'){ %>
 						<% if (i > 0){ %>
 							<div class="post-meta-devide">|</div>
@@ -57,7 +68,7 @@
 							<%= min2read(post.content,{cn:theme.reading_speed_cn, en:theme.reading_speed_en}) %> 分钟
 						</div>
 					<% }
-					
+
 				}
 			%>
 		</div>
@@ -71,16 +82,4 @@
 	<div class="post-content" id="post_content">
 		<%- argon_preprocess_article(post.content, theme, false) %>
 	</div>
-
-	<% if (post.tags.length) { %>
-		<div class="post-tags">
-			<i class="fa fa-tags" aria-hidden="true"></i>
-			<%- list_tags(post.tags, {
-				show_count: false,
-				class: 'tag badge badge-secondary post-meta-detail-tag ',
-				style: 'none',
-				separator: ''
-			}) %>
-		</div>
-	<% } %>
 </article>
