--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,6 +1,9 @@
 					<footer id="footer" class="site-footer card shadow-sm border-0">
 						<%- theme.footer_html %>
-						<div>Theme <a href="https://github.com/solstice23/hexo-theme-argon"><strong>Argon</strong></a> By solstice23</div>
+						<div>Theme <a href="https://github.com/solstice23/hexo-theme-argon"><strong>Argon</strong></a> | Powered by Hexo</div>
+						<span id="busuanzi_container_site_uv">
+							本站访客数 <span id="busuanzi_value_site_uv"></span> 人次
+						</span>
 					</footer>
 				</main>
 			</div>
