--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -43,16 +43,19 @@
 	<meta name="theme-color-rgb" content="<%= hex2str(theme.theme_color) %>">
 	<meta name="theme-color-origin" content="<%= theme.theme_color %>">
 	<meta name="argon-enable-custom-theme-color" content="<%= theme.show_customize_theme_color_picker %>">
-
-
 	<meta name="theme-card-radius" content="<%= theme.card_radius %>">
-
 	<meta name="theme-version" content="<%= argon_version() %>">
+	<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+
 	<%- css('/assets/argon_css_merged.css') %>
 	<%- css('/style.css') %>
-	<%- css('//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Noto+Serif+SC:300,600&display=swap') %>
+	<%- css('//cdnjs.loli.net/css?family=Open+Sans:300,400,600,700|Noto+Serif+SC:300,600&display=swap') %>
+	<%- css('//cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css') %>
 	<%- js('/assets/argon_js_merged.js') %>
 	<%- js('/assets/js/argon.min.js') %>
+	<%- js('//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js') %>
+	<%- js('//cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js') %>
 
 	<script>
 		var argonConfig = {
