--- a/source/style.css
+++ b/source/style.css
@@ -42,7 +42,7 @@ article h1 , article h2 , article h3 , article h4 , article h5 , article h6 , ar
 article h1 , article h2 , article h3 , article h4 , article h5 , article h6{
 	margin-top: 18px !important;
 	margin-bottom: 15px;
-} 
+}
 article h1{
 	font-size: 30px;
 }
@@ -131,8 +131,8 @@ article .post-content u , article .post-content ins{
 }
 article code:not([hljs-codeblock-inner]){
 	font-family: Consolas,Menlo,Monaco,'Andale Mono WT','Andale Mono','Lucida Console','Lucida Sans Typewriter','DejaVu Sans Mono','Bitstream Vera Sans Mono','Liberation Mono','Nimbus Mono L','Courier New',Courier,monospace;
-	color: #5e6687;
-	background: #f5f7ff;
+	color: #f5365c;
+	background: ##eff1f5;
 	direction: ltr;
 	border-radius: 3px;
 }
@@ -1696,7 +1696,7 @@ background: rgba(var(--themecolor-rgbstr), .1);
 }
 .comment-item-avatar{
 	display: block;
-	width: 40px; 
+	width: 40px;
 	margin-top: 26px;
 	margin-right: 15px;
 }
@@ -2131,9 +2131,9 @@ html.darkmode .comment-edit-history-item {
 	width: max-content;
 	width: -moz-max-content;
 }
-.post-comment-link-container:hover:before , .post-comment-link-container.active:before , 
-.post-comment-captcha-container:hover:before , .post-comment-captcha-container.active:before , 
-#post_comment_toggle_extra_input:hover:before , 
+.post-comment-link-container:hover:before , .post-comment-link-container.active:before ,
+.post-comment-captcha-container:hover:before , .post-comment-captcha-container.active:before ,
+#post_comment_toggle_extra_input:hover:before ,
 .comment-post-checkbox:hover:before{
 	transform: translateY(0);
 	opacity: .7;
@@ -2158,7 +2158,7 @@ html.darkmode .comment-edit-history-item {
 .show-extra-input #post_comment_toggle_extra_input i{
 	transform: rotateZ(180deg);
 }
-#post_comment.logged #post_comment_name , 
+#post_comment.logged #post_comment_name ,
 #post_comment.logged #post_comment_email{
 	opacity: 1;
 	background-color: #e9ecef;
@@ -3672,7 +3672,7 @@ html.darkmode .leftbar-menu-subitem {
 html.darkmode .leftbar-menu-item > a{
 	color: #eee !important;
 }
-html.darkmode .leftbar-menu-item > a:hover , 
+html.darkmode .leftbar-menu-item > a:hover ,
 html.darkmode .leftbar-menu-item.current > a {
 	background-color: #606060;
 }
@@ -3680,8 +3680,8 @@ html.darkmode .leftbar-menu-item.current > a {
 html.darkmode .site-author-links-item:hover {
 	background: #555;
 }
-html.darkmode .site-state-item-count , 
-html.darkmode .site-author-links-item > a , 
+html.darkmode .site-state-item-count ,
+html.darkmode .site-author-links-item > a ,
 html.darkmode .site-friend-links-item > a{
 	color: #eee !important;
 }
@@ -3866,7 +3866,7 @@ html.darkmode.amoled-dark body{
 html.darkmode.amoled-dark .leftbar-menu-subitem {
 	background: #000;
 }
-html.darkmode.amoled-dark .leftbar-menu-item > a:hover , 
+html.darkmode.amoled-dark .leftbar-menu-item > a:hover ,
 html.darkmode.amoled-dark .leftbar-menu-item.current > a {
 	background-color: #222;
 }
