--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -50,7 +50,7 @@
 
 	<%- css('/assets/argon_css_merged.css') %>
 	<%- css('/style.css') %>
-	<%- css('//cdnjs.loli.net/css?family=Open+Sans:300,400,600,700|Noto+Serif+SC:300,600&display=swap') %>
+	<%- css('//fonts.loli.net/css?family=Open+Sans:300,400,600,700|Noto+Serif+SC:300,600&display=swap') %>
 	<%- css('//cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css') %>
 	<%- js('/assets/argon_js_merged.js') %>
 	<%- js('/assets/js/argon.min.js') %>
