feat: 添加 giscus 评论系统支持

--- a/layout/_partial/article-bottom.ejs
+++ b/layout/_partial/article-bottom.ejs
@@ -106,6 +106,11 @@
 	<%- partial('_comment/gitalk') %>
 </div>
 <% } %>
+<% if (theme.giscus.enable) { %>
+	<div id="post_comment" class="card shadow-sm">
+		<%- partial('_comment/giscus') %>
+	</div>
+	<% } %>
 <%
 	function get_prev_next_post_card(){
 		let res = "";
