--- a/source/style.css
+++ b/source/style.css
@@ -2234,6 +2234,10 @@ html.darkmode #post_comment.post-comment-force-privatemode-off .comment-post-pri
 	padding: 1.5rem;
 	padding-top: 0;
 }
+/* giscus */
+.giscus {
+	padding: 1.5rem;
+}
 /*评论表情*/
 #comment_emotion_btn {
 	border-radius: 100px;
