--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -479,3 +479,7 @@
 </div>
 
 <div id="content" class="site-content">
+
+<% if (theme.waline.enable) { %>
+	<script src="https://cdn.jsdelivr.net/npm/@waline/client"></script>
+<% } %>
